# duty

./: .gitignore  README.md  compose.dev.yaml  compose.yaml  flake.nix  justfile
.github/workflows/: build.yml  compose-smoke.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  seed.py
backend/app/: config.py  main.py  models.py  schemas.py
backend/app/routers/api/: __init__.py  assignments.py  duties.py  people.py  rules.py  solver.py  stats.py  tags.py
backend/app/services/: solver.py
backend/tests/: conftest.py  test_api_assignments.py  test_api_detail.py  test_api_duties.py  test_api_people.py  test_api_rules.py  test_api_solver.py  test_api_stats.py  test_api_tags.py  test_solver.py  test_solver_scale.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: api.ts  index.css  main.tsx  router.tsx  types.ts
frontend/src/components/: duty-sheet.tsx  pagination-controls.tsx  person-sheet.tsx  tag-badge.tsx  tag-manager.tsx  tag-picker.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  checkbox.tsx  combobox.tsx  data-table.tsx  dialog.tsx  icon.tsx  navigation-menu.tsx  pagination.tsx  select.tsx  sheet.tsx  sonner.tsx
frontend/src/layouts/: root-layout.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: assignments.tsx  calendar.tsx  duties.tsx  not-found.tsx  people.tsx  rules.tsx  stats.tsx  tags.tsx
nginx/: nginx.conf
